cleaned up quiz script

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html>
 <head>
     <title>Test your JavaScript Knowledge</title>
-    <link rel="stylesheet" href="./assets/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;1,100&family=Mulish:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./assets/style/style.css"/>
 </head>
 
 <body>
@@ -18,7 +15,7 @@
             <p>Try your hand at these questions. Each incorrect answer will reduce your remaining time (and final score)! If you're a confident coder, this quiz will be easy. If not, you may need a little more practice and some help from our trusty TAs, Lex and Sally, and incredible instructor, Jung! Keep on coding!</p>
         </article>
         <button id="go-btn">Let's go!</button>
-        <div id="timer"></div>
+        <div id="timer"><h6>Time remaining:</h6> </div>
         <article id="quiz">
         </article>
     </section>
