--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </section>
 
     <section id="hiScores">
+        <h3>High Scores!</h3>
         <ol></ol>
+        <button>Clear Scores</button>
     </section>
 
 
